update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-founding-of-New-England_73933
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73933-h/images/cover.jpg
 creator:
   author:
     agent_name: Adams, James Truslow
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/57280
     wikipedia: https://en.wikipedia.org/wiki/James_Truslow_Adams
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73933#The-founding-of-New-England
 gutenberg_issued: '2024-06-28'
 gutenberg_type: Text
 identifiers:
